[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizer"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tokenizer"
path = "src/main.rs"



[dependencies]
regex = "1.11.2"
indicatif = "0.17"
rayon = "1.8"
serde_json = "1.0"
ureq = "2.9"
pyo3 = { version = "0.21", features = ["extension-module"] }
